# SafeFlight-Map

./: .gitignore  App.css  App.jsx  CLAUDE.md  ColdStart.bat  ColdStart.ps1  INVINCIBLE_AGENT_DIRECTORY.md  MISSION_CHRONICLE.md  MISSION_HANDOVER.md  MISSION_PLAN.md  MapView.jsx  README.md  Sidebar.jsx  StatusBar.jsx  build.ps1  dev.ps1  requirements.txt  safeflight_app.py
scanner-map/backend/: invincible.manifest  invincible.spec  pyproject.toml  requirements.txt  run.py  targets.json
scanner-map/backend/src/app/: config.py  main.py
scanner-map/backend/src/app/api/: accounts.py  achievements.py  control.py  dev_auth.py  device_filter.py  distribution.py  encounters.py  exports.py  flock_cameras.py  geolocation.py  gps.py  gps_ws.py  heatmap.py  hotspots.py  identity.py  replay.py  route_stats.py  routes_control.py  routes_encounters.py  routes_export.py  routes_health.py  routes_heatmap.py  routes_targets.py  scan.py  settings_api.py  stoppers.py  users.py
scanner-map/backend/src/app/core/: alerts_bus.py  allowlist.py  config.py  daily_checkpoint.py  dev_auth.py  device_classifier.py  distribution.py  download_tickets.py  geo.py  privacy.py  timeutils.py
scanner-map/backend/src/app/db/: database.py  models.py  repo.py  session.py
scanner-map/backend/src/app/ingest/: aggressive_scanner.py  axon_fingerprints.py  ble_scanner.py  ble_windows.py  cell_scanner.py  gps_relay.py  gps_store.py  gps_windows.py  interfaces.py  network_discovery.py  route_recorder.py  scanner.py  (+2 more)
scanner-map/backend/tests/: test_encounters.py  test_grid.py  test_privacy.py
(+275 files in other folders)
